--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,10 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.17</version>
+        </dependency>
     </dependencies>
 </project>
